--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
   "version": 2,
-  "rewrites": [{ "source": "/(.*)", "destination": "/index.js" }]
+  "builds": [{ "src": "./index.js", "use": "@vercel/node" }],
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
