--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "pdf-parse@1.1.1": "patches/pdf-parse@1.1.1.patch"
+    }
   }
 }
